Updated by Mason

--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Mason's Proxy</title>
+    <title>Mason's Proxy | Home</title>
     <meta name="description" content="Ho&shy;ly Unbl&#8203;o&#8203;c&#8203;ker is a se&shy;c&#8203;ure we&shy;b pr&#173;ox&#173;y se&#8203;rvi&shy;ce with sup&#8203;po&#173;rt for many sit&shy;es. By&#8203;pa&shy;ss fi&shy;l&#8203;ter&shy;s and fr&shy;ee&#173;ly enj&shy;oy a saf&shy;er pr&shy;iva&shy;te b&#8203;rowsi&shy;ng expe&#173;ri&shy;ence or u&shy;nblo&#8203;ck webs&shy;ites on de&#173;vices such as Chr&#8203;omebo&shy;oks and at plac&#8203;es li&#173;ke sch&shy;o&shy;ol or wor&shy;k with&#8203;out do&#8203;wnload&shy;ing anythi&#173;ng."
     />
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#434c5e">
