--- a/views/pages/misc/deobf/header.html
+++ b/views/pages/misc/deobf/header.html
@@ -1,13 +1,13 @@
-<a href="/" class="brand">H&#173;o&#173;ly U&#173;n&#173;b&#173;lo&#173;c&#173;k&#173;er</a>
+<a href="/" class="brand">Mason's Proxy</a>
 <input id="mnavecb" type="checkbox">
 <label for="mnavecb" class="mnave"><span class="mnavebutton"></span></label>
 <ul class="navbar">
-    <li><a href="/?z">W&#173;eb Pr&#173;ox&#173;ie&#173;s</a></li>
+    <li><a href="/?z">Pr&#173;ox&#173;ie&#173;s</a></li>
     <li><a href="/?sx">Searx</a></li>
     <li><a href="/?g">G&#173;a&#173;me&#173;s</a></li>
     <li><a href="/?y">Yo&#173;uT&#173;u&#173;be</a></li>
     <li><a href="/?d">D&#173;isc&#173;or&#173;d</a></li>
-    <li><a href="/?r">Re&#173;dd&#173;it</a></li>
+    <li><a href="/?r">Ma&#173;son&#173;'s Ga&#173;meH&#173;ub</a></li>
     <!-- tabindex="0" is required on the dropdowns -->
     <li class="dropdown-parent"><a href="#">M&#173;or&#173;e <i class="fas fa-ellipsis-v"></i></a>
         <div class="dropdown-child" tabindex="0">
