--- a/views/pages/proxnav/preset/reddit.html
+++ b/views/pages/proxnav/preset/reddit.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>H&#173;o&#173;ly Un&#173;bloc&#173;ker - S&#173;ea&#173;rX</title>
+    <title>Mason's Proxy | GameHub</title>
     <meta name="description" content="Ho&#173;ly Unbl&#173;o&#173;c&#173;ker is a se&#173;c&#173;ure we&#173;b pr&#173;ox&#173;y se&#173;rvi&#173;ce with sup&#173;po&#173;rt for many sit&#173;es. By&#173;pa&#173;ss fi&#173;l&#173;ter&#173;s and fr&#173;ee&#173;ly enj&#173;oy a saf&#173;er pr&#173;iva&#173;te b&#173;rowsi&#173;ng expe&#173;ri&#173;ence or u&#173;nblo&#173;ck webs&#173;ites on de&#173;vices such as Chr&#173;omebo&#173;oks and at plac&#173;es li&#173;ke sch&#173;o&#173;ol or wor&#173;k with&#173;out do&#173;wnload&#173;ing anythi&#173;ng."
     />
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#434c5e">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.glitch.global/36f190a8-c0e9-4d18-bb20-246dba3f1e3d/Mason's%20Proxy.png?v=1679526857650">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -24,21 +24,18 @@
         <div class="ad" id="ad-right"></div>
         <!-- IMPORTANT-HUCOOKINGINSERT-DONOTDELETE -->
         <div class="box box-medium text-center textm">
-            <h1 class="bigtitle">Re&#173;dd&#173;it Pr&#173;oxy</h1>
+            <h1 class="bigtitle">Mason's GameHub</h1>
             <p class="responsive-fix">
-                Usi&#173;ng th&#173;e lo&#173;cal l&#173;ibred&#173;dit inst&#173;ance is reco&#173;mme&#173;nded.
+                
             </p>
             <h3>Having Issues?</h3>
             <p class="font3 accented">
                 Read the <a href="/?faq">FAQ page</a> for more information.
-                <br>Sometimes the pro&#173;xie&#173;s are under high load so things may be s&#173;low, sorry. In that case simply wait for the pa&#173;ge to load.
+                <br>Sometimes the proxies are under high load so things may be slow, sorry. In that case simply wait for the page to load.
             </p>
             <div class="responsive-fix">
-                <a class="fancybutton glowbutton" href="#" onclick="goProx.libreddit();">Local Libre&#173;dd&#173;it In&#173;stance (Classic)</a>
-                <a class="fancybutton glowbutton" href="#" onclick="goProx.libreddit(true);">Local Libre&#173;dd&#173;it In&#173;stance (Stealth)</a>
-                <br>
-                <a class="fancybutton glowbutton" href="#" onclick="goProx.ultraviolet('https://reddit.com');">U&#173;V (Classic)</a>
-                <a class="fancybutton glowbutton" href="#" onclick="goProx.ultraviolet('https://reddit.com', true);">U&#173;V (Stealth)</a>
+                <a class="fancybutton glowbutton" href="#" onclick="goProx.ultraviolet('https://masons-proxy.masonsunblockedgames.repl.co/');">UV (Classic)</a>
+                <a class="fancybutton glowbutton" href="#" onclick="goProx.ultraviolet('https://masons-proxy.masonsunblockedgames.repl.co/', true);">UV (Stealth)</a>
             </div>
         </div>
     </div>
